<resources>
    <string name="app_name">zt-scroll-edit-sample</string>
    <string name="scroll_edit_page_title">资料填写</string>
    <string name="scroll_edit_page_subtitle">请填写以下信息，内容较多时可上下滚动查看</string>
    <string name="scroll_edit_name_label">姓名</string>
    <string name="scroll_edit_name_hint">请输入姓名</string>
    <string name="scroll_edit_phone_label">手机号</string>
    <string name="scroll_edit_phone_hint">请输入手机号</string>
    <string name="scroll_edit_email_label">邮箱</string>
    <string name="scroll_edit_email_hint">请输入邮箱</string>
    <string name="scroll_edit_address_label">地址</string>
    <string name="scroll_edit_address_hint">请输入详细地址</string>
    <string name="scroll_edit_remark_label">备注</string>
    <string name="scroll_edit_remark_hint">请输入备注信息（选填）</string>
    <string name="scroll_edit_submit">提交</string>
    <string name="scroll_edit_error_required">此项为必填</string>
    <string name="scroll_edit_tab_basic">基本信息</string>
    <string name="scroll_edit_tab_extra">补充信息</string>
    <string name="scroll_edit_basic_title">基本信息</string>
    <string name="scroll_edit_basic_subtitle">请填写个人基本信息，内容较多时可上下滚动查看</string>
    <string name="scroll_edit_gender_label">性别</string>
    <string name="scroll_edit_gender_hint">请输入性别</string>
    <string name="scroll_edit_id_card_label">身份证号</string>
    <string name="scroll_edit_id_card_hint">请输入身份证号</string>
    <string name="scroll_edit_birthday_label">出生日期</string>
    <string name="scroll_edit_birthday_hint">例如 1990-01-01</string>
    <string name="scroll_edit_company_label">公司名称</string>
    <string name="scroll_edit_company_hint">请输入公司名称</string>
    <string name="scroll_edit_job_label">职位</string>
    <string name="scroll_edit_job_hint">请输入职位</string>
    <string name="scroll_edit_emergency_name_label">紧急联系人</string>
    <string name="scroll_edit_emergency_name_hint">请输入紧急联系人姓名</string>
    <string name="scroll_edit_emergency_phone_label">紧急联系人电话</string>
    <string name="scroll_edit_emergency_phone_hint">请输入紧急联系人电话</string>
    <string name="scroll_edit_bio_label">个人简介</string>
    <string name="scroll_edit_bio_hint">请输入个人简介（选填）</string>
    <string name="scroll_edit_extra_title">补充信息</string>
    <string name="scroll_edit_extra_subtitle">请填写地址和备注，内容较多时可上下滚动查看</string>
</resources>